# beepbotdx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  platformio.ini
src/: boot_image.h  config.h  main.cpp
src/core/: app.cpp  app.h  bloom_field.cpp  bloom_field.h  canvas.cpp  canvas.h  character.cpp  character.h  fx_dsp.h  grid_layout.h  pattern_gen.cpp  pattern_gen.h  project.cpp  project.h  project_header.h  sequencer.cpp  sequencer.h  slot_fx.h  sound_slot.cpp  sound_slot.h  theme.cpp  theme.h  timing.h
src/platform/: audio.cpp  audio.h  display.cpp  display.h  input.cpp  input.h  led.cpp  led.h  memory.cpp  memory.h  power.cpp  power.h  screenshot.cpp  screenshot.h  storage.cpp  storage.h
src/platform_desktop/: audio.cpp  display.cpp  display.h  input.cpp  led.cpp  main_desktop.cpp  memory.cpp  power.cpp  storage.cpp
src/views/: pattern_edit_view.cpp  pattern_edit_view.h  pattern_select_view.cpp  pattern_select_view.h  play_view.cpp  play_view.h  project_info_view.cpp  project_info_view.h  project_view.cpp  project_view.h  settings_view.cpp  settings_view.h  song_view.cpp  song_view.h  sound_view.cpp  sound_view.h  view.h
